estructura en html terminada

--- a/index.html
+++ b/index.html
@@ -2,9 +2,73 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" width="device-width, initial-scale=1.0" >
 	<title>Página de Web de Creator</title>
+	<!--Agregando link de css-->
+	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-	
+	<header>
+		<div class="logotipo">
+			<h3>Creator</h3>
+		</div>
+		<nav>
+			<ul>
+				<li><a href="#"></a>Inicio</li>
+				<li><a href="#"></a>Nosotros</li>
+				<li><a href="#"></a>servicios</li>
+				<li><a href="#"></a>portafolio</li>
+				<li><a href="#"></a>Contacto</li>
+			</ul>
+		</nav>
+	</header>
+	<section class="entrada">
+		<img src="images/banner.jpg" alt="banner de creator">
+		<p>Bievenidos a nuestro estudio</p>
+		<h1>ENCANTADOS DE CONOCERTE</h1>
+		<button>Ponte en contacto</button>
+	</section>
+	<section class="quienes-somos">
+		<img src="images/nosotros.svg" alt="">
+		<h3>¿Quienes Somos?</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio impedit nihil dolores inventore mollitia, voluptatem possimus, fuga accusamus est quae aliquam soluta eveniet qui. Doloribus omnis facere architecto aperiam praesentium.</p>
+		<button>Mas informacion</button>
+	</section>
+	<section class="servicios">
+		<h3>Nuestros Servicios</h3>
+		<div class="servicios">
+			<article>
+				<div>
+					<span>icono</span>
+					<h5>Aplicaciones para la nube</h5>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nihil consequuntur, molestiae ut amet hic veniam id deleniti ea vel minus doloribus laborum ratione laboriosam facere modi a consectetur repudiandae!</p>
+				</div>
+				<div>
+					<span>icono</span>
+					<h5>Fabrica de Software</h5>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nihil consequuntur, molestiae ut amet hic veniam id deleniti ea vel minus doloribus laborum ratione laboriosam facere modi a consectetur repudiandae!</p>
+				</div>
+				<div>
+					<span>icono</span>
+					<h5>diseño Personalizado</h5>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nihil consequuntur, molestiae ut amet hic veniam id deleniti ea vel minus doloribus laborum ratione laboriosam facere modi a consectetur repudiandae!</p>
+				</div>
+			</article>
+		</div>
+	</section>
+	<section class="portafolio">
+		<h3>Portafolio de La Empresa</h3>
+		<div class="portafolios">
+			<img src="images/proyecto1.svg" alt="proyecto 1">
+			<img src="images/proyecto2.svg" alt="proyecto 2">
+			<img src="images/proyecto3.svg" alt="proyecto 3">
+			<img src="images/proyecto4.svg" alt="proyecto 4">
+			<img src="images/proyecto5.svg" alt="proyecto 5">
+			<img src="images/proyecto6.svg" alt="proyecto 6">
+		</div>
+	</section>
+	<footer>
+		<span>2016 © NETWORK Todos los derechos reservados</span>
+	</footer>
 </body>
 </html>
