cambio en la estructura html

--- a/index.html
+++ b/index.html
@@ -5,54 +5,50 @@
 	<meta name="viewport" width="device-width, initial-scale=1.0" >
 	<title>Página de Web de Creator</title>
 	<!--Agregando link de css-->
-	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
 	<header>
-		<div class="logotipo">
-			<h3>Creator</h3>
-		</div>
+		<h3>Creator</h3>
 		<nav>
 			<ul>
-				<li><a href="#"></a>Inicio</li>
-				<li><a href="#"></a>Nosotros</li>
-				<li><a href="#"></a>servicios</li>
-				<li><a href="#"></a>portafolio</li>
-				<li><a href="#"></a>Contacto</li>
+				<li><a href="#">Inicio</a></li>
+				<li><a href="#">Nosotros</a></li>
+				<li><a href="#">Servicios</a></li>
+				<li><a href="#">Portafolio</a></li>
+				<li><a href="#">Contáctanos</a></li>
 			</ul>
 		</nav>
 	</header>
 	<section class="entrada">
 		<img src="images/banner.jpg" alt="banner de creator">
-		<p>Bievenidos a nuestro estudio</p>
+		<h6>Bievenidos a nuestro estudio</h6>
 		<h1>ENCANTADOS DE CONOCERTE</h1>
-		<button>Ponte en contacto</button>
+		<a href="#">Ponte en Contácto</a>
 	</section>
 	<section class="quienes-somos">
 		<img src="images/nosotros.svg" alt="">
 		<h3>¿Quienes Somos?</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio impedit nihil dolores inventore mollitia, voluptatem possimus, fuga accusamus est quae aliquam soluta eveniet qui. Doloribus omnis facere architecto aperiam praesentium.</p>
-		<button>Mas informacion</button>
+		<a href="#">Más información</a>
 	</section>
 	<section class="servicios">
 		<h3>Nuestros Servicios</h3>
 		<div class="servicios">
 			<article>
-				<div>
-					<span>icono</span>
-					<h5>Aplicaciones para la nube</h5>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nihil consequuntur, molestiae ut amet hic veniam id deleniti ea vel minus doloribus laborum ratione laboriosam facere modi a consectetur repudiandae!</p>
-				</div>
-				<div>
-					<span>icono</span>
-					<h5>Fabrica de Software</h5>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nihil consequuntur, molestiae ut amet hic veniam id deleniti ea vel minus doloribus laborum ratione laboriosam facere modi a consectetur repudiandae!</p>
-				</div>
-				<div>
-					<span>icono</span>
-					<h5>diseño Personalizado</h5>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nihil consequuntur, molestiae ut amet hic veniam id deleniti ea vel minus doloribus laborum ratione laboriosam facere modi a consectetur repudiandae!</p>
-				</div>
+				<span>icono</span>
+				<h5>Aplicaciones para la nube</h5>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nihil consequuntur, molestiae ut amet hic veniam id deleniti ea vel minus doloribus laborum ratione laboriosam facere modi a consectetur repudiandae!</p>
+			</article>
+			<article>
+				<span>icono</span>
+				<h5>Fabrica de Software</h5>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nihil consequuntur, molestiae ut amet hic veniam id deleniti ea vel minus doloribus laborum ratione laboriosam facere modi a consectetur repudiandae!</p>
+			</article>
+			<article>
+				<span>icono</span>
+				<h5>diseño Personalizado</h5>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nihil consequuntur, molestiae ut amet hic veniam id deleniti ea vel minus doloribus laborum ratione laboriosam facere modi a consectetur repudiandae!</p>
 			</article>
 		</div>
 	</section>
