--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 </head>
 <body>
 	<header>
-		<h3>Creator</h3>
-		<nav>
-			<ul>
-				<li><a href="#">Inicio</a></li>
-				<li><a href="#">Nosotros</a></li>
-				<li><a href="#">Servicios</a></li>
-				<li><a href="#">Portafolio</a></li>
-				<li><a href="#">Contáctanos</a></li>
-			</ul>
-		</nav>
+        <div class="encabezado">
+            <h3>Creator.com</h3>
+            <nav>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Portafolio</a></li>
+                    <li><a href="#">Contáctanos</a></li>
+                </ul>
+            </nav>
+        </div>    
 	</header>
 	<section class="entrada">
 		<img src="images/banner.jpg" alt="banner de creator">
