terminada la cabecera, empezando con quienes somos

--- a/index.html
+++ b/index.html
@@ -8,28 +8,33 @@
 	<link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-	<header>
-        <div class="encabezado">
-            <h3>Creator.com</h3>
-            <nav>
-                <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Nosotros</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Portafolio</a></li>
-                    <li><a href="#">Contáctanos</a></li>
-                </ul>
-            </nav>
-        </div>    
-	</header>
-	<section class="entrada">
-		<img src="images/banner.jpg" alt="banner de creator">
-		<h6>Bievenidos a nuestro estudio</h6>
-		<h1>ENCANTADOS DE CONOCERTE</h1>
-		<a href="#">Ponte en Contácto</a>
-	</section>
+    <section class="bienvenidos">
+        <div class="container">
+           <header>
+               <div class="encabezado">
+                <h3>Creator.com</h3>
+                <nav>
+                    <ul>
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="#">Nosotros</a></li>
+                        <li><a href="#">Servicios</a></li>
+                        <li><a href="#">Portafolio</a></li>
+                        <li><a href="#">Contáctanos</a></li>
+                    </ul>
+                </nav>
+               </div>
+            </header>
+            <div class="texto-bienvenido">
+                <h6>Bievenidos a nuestro estudio</h6>
+                <h1>ENCANTADOS DE CONOCERTE</h1>
+                <a href="#">Ponte en Contácto</a>
+            </div>
+        </div>
+    </section>
+
+
 	<section class="quienes-somos">
-		<img src="images/nosotros.svg" alt="">
+		<img class="banner-quienes-somos" src="images/nosotros.svg" alt="">
 		<h3>¿Quienes Somos?</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio impedit nihil dolores inventore mollitia, voluptatem possimus, fuga accusamus est quae aliquam soluta eveniet qui. Doloribus omnis facere architecto aperiam praesentium.</p>
 		<a href="#">Más información</a>
