quienes somos terminado

--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
 
 
 	<section class="quienes-somos">
-		<img class="banner-quienes-somos" src="images/nosotros.svg" alt="">
-		<h3>¿Quienes Somos?</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio impedit nihil dolores inventore mollitia, voluptatem possimus, fuga accusamus est quae aliquam soluta eveniet qui. Doloribus omnis facere architecto aperiam praesentium.</p>
-		<a href="#">Más información</a>
+        <div class="container">
+            <img class="banner-quienes-somos" src="images/nosotros.svg" alt="">
+            <h3>¿Quienes Somos?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio impedit nihil dolores inventore mollitia, voluptatem possimus, fuga accusamus est quae aliquam soluta eveniet qui. Doloribus omnis facere architecto aperiam praesentium.</p>
+            <a href="#">Más información</a>
+        </div>    
 	</section>
 	<section class="servicios">
 		<h3>Nuestros Servicios</h3>
