terminado el bloque servicios, empezamos con el bloque portafolio

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Página de Web de Creator</title>
 	<!--Agregando link de css-->
 	<link rel="stylesheet" href="css/estilo.css">
+    <!--Agregando estilos de font-awesome-->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
     <section class="bienvenidos">
@@ -34,28 +36,26 @@
 
 
 	<section class="quienes-somos">
-        <div class="container">
             <img class="banner-quienes-somos" src="images/nosotros.svg" alt="">
             <h3>¿Quienes Somos?</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio impedit nihil dolores inventore mollitia, voluptatem possimus, fuga accusamus est quae aliquam soluta eveniet qui. Doloribus omnis facere architecto aperiam praesentium.</p>
-            <a href="#">Más información</a>
-        </div>    
+            <a href="#">Más información</a>   
 	</section>
-	<section class="servicios">
+	<section class="servicios-creator">
 		<h3>Nuestros Servicios</h3>
 		<div class="servicios">
 			<article>
-				<span>icono</span>
+				<span class="fa fa-briefcase" aria-hidden="true"></span>
 				<h5>Aplicaciones para la nube</h5>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nihil consequuntur, molestiae ut amet hic veniam id deleniti ea vel minus doloribus laborum ratione laboriosam facere modi a consectetur repudiandae!</p>
 			</article>
 			<article>
-				<span>icono</span>
+				<span class="fa fa-bullhorn" aria-hidden="true"></span>
 				<h5>Fabrica de Software</h5>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nihil consequuntur, molestiae ut amet hic veniam id deleniti ea vel minus doloribus laborum ratione laboriosam facere modi a consectetur repudiandae!</p>
 			</article>
 			<article>
-				<span>icono</span>
+				<span class="fa fa-check-square-o" aria-hidden="true"></span>
 				<h5>diseño Personalizado</h5>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nihil consequuntur, molestiae ut amet hic veniam id deleniti ea vel minus doloribus laborum ratione laboriosam facere modi a consectetur repudiandae!</p>
 			</article>
